# CEngine

./: .gitignore  CMakeLists.txt  imgui_demo.cpp  main.cpp  readme.md  vcpkg.json
src/: CMakeLists.txt  imgui_demo.cpp  main.cpp
src/backend/: readme.md
src/core/: Definitions.h  StringUtils.cpp
src/core/debug/: ILoggable.h  Timer.h
src/core/event/: EventController.cpp  EventController.h  IListener.h  ListenerWrapper.cpp  ListenerWrapper.h
src/core/structures/: Map.cpp
src/editor/: readme.md
src/editor/core/: AbstractWindow.cpp  AbstractWindow.h  IRunner.h  IWindow.cpp  IWindow.h  Runner.cpp  Runner.h
src/editor/core/document/: Document.cpp  Document.h  ElementController.cpp  ElementController.h  IOController.cpp  IOController.h  ViewController.cpp  ViewController.h
src/editor/core/elements/: AbstractSimpleElement.cpp  AbstractSimpleElement.h  AbstractTitledElement.cpp  AbstractTitledElement.h  DynamicElement.h  EButton.cpp  EButton.h  EIcon.h  EInlineBlock.h  EMenu.cpp  EMenu.h  EMenuBar.h  EMenuItem.cpp  EMenuItem.h  ETree.cpp  ETree.h  ETreeNode.cpp  ETreeNode.h  IElement.h
src/editor/core/store/: IStore.h
src/editor/core/views/: IView.cpp  IView.h
src/editor/ui/: DEFINITIONS.h  readme.md
src/editor/ui/core/: ControllerFactory.h  Document.cpp  Document.h  DocumentBuilder.cpp  DocumentBuilder.h  ViewFactory.cpp  ViewFactory.h  Window.cpp  Window.h
src/editor/ui/definitions/: Sample.xml  Schema.xsd
src/editor/ui/stores/: AbstractStore.h
src/editor/windows/editor/: EditorWindow.cpp  EditorWindow.h
src/engine/: Engine.cpp  Engine.h  readme.md
src/engine/components/: CMetadata.cpp  CMetadata.h  IComponent.h
src/engine/event/: EventController.cpp  EventController.h  IEventPayload.cpp  IEventPayload.h  IEventTarget.h  IListener.cpp  IListener.h  ListenerWrapper.h  TypedEventPayload.h
src/engine/resource/: IResource.cpp  IResource.h  IStaticResource.cpp  IStaticResource.h  ResourceType.h  ResourcesController.cpp  ResourcesController.h  ResourcesSystem.cpp  ResourcesSystem.h  StaticResource.h  UBOType.h
src/engine/resource/core/: IResource.h  RFBO.cpp  RFBO.h  RMesh.cpp  RMesh.h  RShader.cpp  RShader.h  RUBO.cpp  RUBO.h  VertexBufferObject.h
src/engine/resource/dto/: FBOTextureDTO.h  UBODataDTO.h
src/engine/resource/resources/: IResource.cpp  IResource.h  RFBO.cpp  RFBO.h  RMesh.cpp  RMesh.h  RShader.h  RTexture.cpp  RTexture.h  RVBO.cpp  RVBO.h  VertexBufferObject.cpp
src/engine/resource/static/: direct_shadows.fs  direct_shadows.vs
src/engine/runtime/: ISystem.cpp  ISystem.h  RuntimeSystem.cpp  RuntimeSystem.h  SystemsController.h
src/engine/system/: ISystem.cpp  ISystem.h  SystemsController.cpp  SystemsController.h
src/engine/util/: StringUtils.cpp  StringUtils.h  UUID.cpp  UUID.h
src/engine/util/debug/: Timer.h  (+2 more)
src/engine/world/: Component.h  IEntity.cpp  IEntity.h  World.cpp  World.h  WorldController.cpp  WorldController.h  WorldRegistry.cpp  WorldRegistry.h  WorldSystem.cpp  WorldSystem.h
src/ui/: AbstractUIComponent.h  Block.h  BlockComponent.h  Document.cpp  Document.h  Schema.xsd  Text.h  TextComponent.h  UI.h  UIComponent.h
src/ui/components/: AbstractComponent.h  Component.cpp  Component.h  IComponent.h  PanelUI.cpp  PanelUI.h  Section.h  TextUI.cpp  TextUI.h  UIComponent.cpp  UIComponent.h
src/ui/controllers/: AbstractController.cpp  AbstractController.h
src/ui/core/: ControllerFactory.cpp  ControllerFactory.h  Document.cpp  Document.h  DocumentBuilder.cpp  DocumentBuilder.h  ElementFactory.cpp  ElementFactory.h  ElementsState.cpp  ElementsState.h  IRunner.h  IWindow.cpp  IWindow.h  ViewFactory.cpp  ViewFactory.h  ViewsState.cpp  ViewsState.h  Window.cpp  Window.h
src/ui/definitions/: Footer.xml  Sample.xml  Schema.xsd
src/ui/document/: Document.cpp  Document.h  ElementController.cpp  ElementController.h  IOController.cpp  IOController.h  ViewController.cpp  ViewController.h
src/ui/elements/: AbstractSimpleElement.h  AbstractTitledElement.h  DynamicElement.cpp  EButton.cpp  EButton.h  EIcon.cpp  EIcon.h  EInlineBlock.cpp  EInlineBlock.h  EMenu.cpp  EMenu.h  EMenuBar.cpp  EMenuBar.h  EMenuItem.cpp  EMenuItem.h  ESection.cpp  ESection.h  EText.cpp  EText.h  ETree.cpp  ETree.h  ETreeNode.cpp  ETreeNode.h  IElement.cpp  IElement.h  IView.cpp  IView.h  SectionView.cpp  SectionView.h  TextView.cpp  TextView.h
src/ui/event/: EventController.cpp  EventController.h  IEventPayload.cpp  IEventPayload.h  IListener.cpp  IListener.h  ListenerWrapper.cpp  ListenerWrapper.h  TypedEventPayload.h
src/ui/src/: Document.cpp  Document.h  Window.cpp  Window.h
src/ui/store/: IStore.h
src/ui/stores/: AbstractStore.h
src/ui/views/: AbstractView.h  IView.cpp  IView.h
src/util/: AbstractLogger.cpp  AbstractLogger.h  DoubleLinkedList.h  DynamicMap.h  Filesystem.h  ILoggable.h  LinkedList.h  StringUtils.h  Timer.h  UUID.cpp  UUID.h  readme.md
src/util/debug/: ILoggable.cpp  ILoggable.h  Timer.cpp
src/util/structures/: DynamicMap.h  List.h  Map.cpp  Map.h
src/window/core/: AbstractWindow.cpp  AbstractWindow.h  Runner.cpp  Runner.h
src/window/editor/: EditorWindow.cpp  EditorWindow.h
src/windows/core/: Window.h
src/windows/editor/: Editor.cpp  Editor.h
src/windows/projects/: readme.md
test/: CMakeLists.txt  Tester.cpp  Tester.h  imgui_demo.cpp  main_test.cpp
test/core/: ListTest.cpp  LoggerTest.cpp  LoggerTest.h  MapTest.cpp  TimerTest.cpp  TimerTest.h
test/engine/: EngineTest.cpp  EngineTest.h
test/ui/: DocumentBuilderTest.cpp  DocumentTest.cpp  DocumentTest.h  Example.h  Example.xml  UITest.cpp  sampleUI.xml
test/ui/document/: DocumentTest.cpp  DocumentTest.h  Example.cpp  Example.h  Example.xml
test/ui/event/: EventControllerTest.cpp  EventControllerTest.h  Listener.cpp  Listener.h  ListenerPayload.cpp  ListenerPayload.h
test/ui/store/: IStoreTest.cpp  IStoreTest.h  SampleData.h  SampleStore.h
test/util/: DoubleLinkedListTest.cpp  DynamicMapTest.cpp  FilesystemTest.cpp  LinkedListTest.cpp  ListTest.cpp  ListTest.h  LoggerTest.cpp  LoggerTest.h  MapTest.cpp  MapTest.h  TimerTest.cpp  TimerTest.h
(+105 files in other folders)
